--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ body {
 .toggle-dark-mode.dark {
   background-color: #fff;
   color: #000;
+  border: none;
 }
 
 .navbar {
@@ -59,15 +60,45 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: var(--primary-color);
-  color: var(--text-color-dark);
   padding: 10px;
   z-index: 1;
 }
 
 .navbar a {
-  color: var(--text-color-dark);
-  text-decoration: none;
-  margin: 0 10px;
+  color: var(--text-color-light);
+  position: relative;
+  z-index: 0;
+  margin: 0 10px
+}
+
+.navbar a:hover {
+  color: #b3b3b3;
+}
+
+.navbar a:before, .navbar a:after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  border: 4px solid #0277bd;
+  transform: translate(-50%, -50%) scale(0.8);
+  border-radius: 50%;
+  background: transparent;
+  content: "";
+  opacity: 0;
+  transition: all 0.3s;
+  z-index: -1;
+}
+
+.navbar a:hover:before {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.navbar a:hover:after {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1.3);
 }
 
 .navbar button {
