footer added :foot:

--- a/src/App.css
+++ b/src/App.css
@@ -250,3 +250,14 @@ ul {
   color: white;
   cursor: pointer;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--primary-color);
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
